--- a/README
+++ b/README
@@ -19,9 +19,8 @@ Supported SoCs / MACHINE names
 Sources
 =======
 - meta-atmel
-URI: git://github.com/linux4sam/meta-atmel.git
-URI: https://github.com/linux4sam/meta-atmel.git
-Branch: master (tested with commit ID: 092992189540516d57583d6f08f647e39570f602)
+URI: git://github.com/koansoftware/meta-atmel.git
+URI: https://github.com/koansoftware/meta-atmel.git
 
 
 Dependencies
@@ -30,55 +29,31 @@ This Layer depends on :
 - meta-openembedded
 URI: git://git.openembedded.org/meta-openembedded
 URI: http://cgit.openembedded.org/meta-openembedded/
-Branch: daisy (tested with commit ID: d85b01997ce8cc354ccc53f97fdffc79cf2277d5)
 
 - meta-qt5
 URI: git://github.com/meta-qt5/meta-qt5.git
 URI: https://github.com/meta-qt5/meta-qt5
-Branch: daisy (tested with commit ID: a06222499ab602e7c67c1433dd0b559d51d3d744)
 
 
 Build procedure
 ===============
 
-1/ Clone yocto/poky git repository
-git clone git://git.yoctoproject.org/poky
+* Clone yocto/poky git repository
+git clone git://git.yoctoproject.org/poky -b dizzy
 
-2/ Checkout daisy tag
-cd poky
-git checkout daisy-11.0.1 -b my_branch
+* Clone meta-openembedded git repository
+git clone git://git.openembedded.org/meta-openembedded -b dizzy
 
-3/ Clone meta-openembedded git repository
-git clone git://git.openembedded.org/meta-openembedded
+* Clone meta-qt5 git repository
+git clone git://github.com/meta-qt5/meta-qt5.git -b dizzy
 
-4/ Checkout proper meta-openembedded branch
-cd meta-openembedded
-git checkout origin/daisy -b my_branch
-# come back to the "poky" directory for next steps
-cd ..
+* Clone meta-atmel layer (master)
+git clone git://github.com/koansoftware/meta-atmel.git
 
-5/ Clone meta-qt5 git repository
-git clone git://github.com/meta-qt5/meta-qt5.git
-
-6/ Checkout proper meta-qt5 branch
-cd meta-qt5
-git checkout origin/daisy -b my_branch
-# come back to the "poky" directory for next steps
-cd ..
-
-7/ Clone meta-atmel layer
-git clone git://github.com/linux4sam/meta-atmel.git meta-atmel
-
-8/ Checkout proper meta-atmel branch
-cd meta-atmel
-git checkout origin/master -b my_branch
-# come back to the "poky" directory for next steps
-cd ..
-
-9/ Initialize build directory
+* Initialize build directory
 source oe-init-build-env build-atmel
 
-10/ Add meta-atmel layer patch to bblayer configuration file
+* Add meta-atmel layer patch to bblayer configuration file
 vim conf/bblayers.conf
 
 # LAYER_CONF_VERSION is increased each time build/conf/bblayers.conf
@@ -98,10 +73,10 @@ BBLAYERS ?= " \
   /home/pvilchez/workspace/github/poky/meta-openembedded/meta-networking \
   /home/pvilchez/workspace/github/poky/meta-openembedded/meta-ruby \
   "
-11/ Edit local.conf to specify the machine, location of source archived, package type (rpm, deb or ipk)
+* Edit local.conf to specify the machine, location of source archived, package type (rpm, deb or ipk)
 vim conf/local.conf
 [...]
-MACHINE ??= "sama5d4ek"
+MACHINE ??= "sama5d4-xplained"
 [...]
 DL_DIR ?= "your_download_directory_path"
 [...]
@@ -115,39 +90,46 @@ MACHINE ??= "sama5d3-xplained"
 MACHINE ??= "sama5d4ek"
 MACHINE ??= "sama5d4-xplained"
 
-12/ Build core minimal image
+* Build core minimal image
 bitbake core-image-minimal
 
-13/ We found that additional local.conf changes are needed for our QT demo
+* We found that additional local.conf changes are needed for our QT demo
 image. You can add these two lines at the end of the file:
 vim conf/local.conf
 [...]
 LICENSE_FLAGS_WHITELIST += "commercial"
 SYSVINIT_ENABLED_GETTYS = ""
 
-14/ Build Atmel demo images
+* Build Atmel demo images
 bitbake atmel-qt5-demo-image
 
 
-Typical bitbake output
-======================
+Typical bitbake output [ TESTED ON 10-02-2015 ]
+=================================================
+- MACHINE = "sama5d4-xplained"
+- bitbake atmel-qt5-demo-image
+
 Build Configuration:
-BB_VERSION        = "1.22.0"
+BB_VERSION        = "1.24.0"
 BUILD_SYS         = "x86_64-linux"
 NATIVELSBSTRING   = "Ubuntu-12.04"
 TARGET_SYS        = "arm-poky-linux-gnueabi"
-MACHINE           = "sama5d4ek"
+MACHINE           = "sama5d3-xplained"
 DISTRO            = "poky"
-DISTRO_VERSION    = "1.6.1"
-TUNE_FEATURES     = "armv7a vfp thumb neon callconvention-hard cortexa5"
-TARGET_FPU        = "vfp-neon"
-meta-atmel        = "master:092992189540516d57583d6f08f647e39570f602"
-meta-qt5          = "daisy:a06222499ab602e7c67c1433dd0b559d51d3d744"
+DISTRO_VERSION    = "1.7.1"
+TUNE_FEATURES     = "arm armv7a vfp thumb callconvention-hard cortexa5"
+TARGET_FPU        = "vfp"
+meta-atmel        = "dizzy-distro:50afe9274cbf0216dff7fca7a5e39de8a1648e22"
+meta-qt5          = "dizzy:1cec680ca9bcd00caaede8fa3d0ff3a4317550dc"
 meta              
 meta-yocto        
-meta-yocto-bsp    = "atmel-daisy-11.0.1:c4f1f0f491f988901bfd6965f7d10f60cb94a76f"
+meta-yocto-bsp    = "dizzy:53b33d85de334a96e4f6f7edc2ad72d103627e3b"
 meta-oe           
-meta-networking   = "daisy:d85b01997ce8cc354ccc53f97fdffc79cf2277d5"
+meta-networking   
+meta-python       
+meta-ruby         = "dizzy:6413cdb66acf43059f94d0076ec9b8ad6a475b35"
+
+
 
 
 Contributing
@@ -163,9 +145,19 @@ for some useful guidelines to be followed when submitting patches:
 http://www.openembedded.org/wiki/How_to_submit_a_patch_to_OpenEmbedded
 
 Maintainers:
-Nicolas Ferre <nicolas.ferre@atmel.com>
-Patrice Vilchez <patrice.vilchez@atmel.com>
+- Marco Cavallini <m.cavallini -AT- koansoftware.com>
+  - Nicolas Ferre <nicolas.ferre@atmel.com>
+  - Patrice Vilchez <patrice.vilchez@atmel.com>
 
 When creating patches insert the [meta-atmel] tag in the subject, for example
 use something like:
 git format-patch -s --subject-prefix='meta-atmel][PATCH' <origin>
+
+
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+Marco Cavallini | KOAN sas | Bergamo - Italia
+ embedded and real-time software engineering
+      http://www.KoanSoftware.com
+Upcoming Yocto training: http://goo.gl/0iHGDL
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
+
